<resources>
    <string name="app_name">CLTO</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="logIn">"Log In \n As"</string>
    <string name="btnTeam">Team</string>
    <string name="btnGuest">Guest"</string>
    <string name="masuk">Masuk</string>
    <string name="edtEmail">Email</string>
    <string name="edtNamaTim">Nama Tim</string>
    <string name="edtKapten">Nama Kapten</string>
    <string name="edtKota">Kota Asal</string>
    <string name="edtBasecamp">Basecamp</string>
    <string name="edtNomorTelpon">Nomor Telepon</string>
    <string name="edtPass">Password</string>
    <string name="edtConfPass">Confirm Password</string>
    <string name="btnDaftar">Daftar</string>
    <string name="edtGuest">Guest Name</string>
    <string name="btnSepakBola">Sepak Bola</string>
    <string name="btnLupaPassword">Lupa Password?</string>
    <string name="btnDaftarLink">Tidak punya akun?</string>
    <string name="btnBasket">Basket</string>
    <string name="btnVoli">Voli</string>
    <string name="btnFutsal">Futsal</string>
    <string name="btnAirSoftGun">Air Soft Gun</string>
</resources>