<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ProgressBar
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/pgBar"
        android:visibility="gone"/>
    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/edtTim"
            android:hint="@string/edtNamaTim"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:singleLine="true"
            />



    </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/edtKapten"
            android:hint="@string/edtKapten"
            android:inputType="textPassword"
            android:maxLines="1"
            android:singleLine="true"
            />



    </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/edtKota"
            android:hint="@string/edtKota"
            android:textColor="@color/colorAccent"
            android:inputType="textPassword"
            android:maxLines="1"
            android:singleLine="true"
            />



    </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/edtBasecamp"
            android:hint="@string/edtBasecamp"
            android:textColor="@color/colorAccent"
            android:inputType="textPassword"
            android:maxLines="1"
            android:singleLine="true"
            />



    </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/edtNoTel"
            android:hint="@string/edtNomorTelpon"
            android:textColor="@color/colorAccent"
            android:inputType="textPassword"
            android:maxLines="1"
            android:singleLine="true"
            />



    </android.support.design.widget.TextInputLayout>
    <Button
        android:id="@+id/btnDaftar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:background="@color/colorAccent"
        android:onClick="btnDaftar"
        android:layout_gravity="center"
        android:text="@string/btnDaftar"
        android:textColor="@color/fontButton" />

</LinearLayout>
