<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
<LinearLayout
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_gravity="center"
    android:gravity="center"
    android:layout_height="wrap_content">
    <ImageView
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:src="@mipmap/ic_launcher" />
    <ProgressBar
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/pgBar"
        android:visibility="gone"/>
    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/edtEmail"
            android:hint="@string/edtEmail"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:singleLine="true"
            />



    </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/edtPass"
            android:hint="@string/edtPass"
            android:inputType="textPassword"
            android:maxLines="1"
            android:singleLine="true"
            />



    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/btnDaftar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:background="@color/colorAccent"
        android:onClick="btnLogin"
        android:layout_gravity="center"
        android:text="@string/masuk"
        android:textAllCaps="false"
        android:textColor="@color/fontButton" />
    <Button
        android:id="@+id/btn_reset_password"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dip"
        android:background="@null"
        android:text="@string/btnLupaPassword"
        android:textAllCaps="false"
        android:textColor="@color/colorAccent" />

    <!-- Link to Login Screen -->

    <Button
        android:id="@+id/btn_signup"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dip"
        android:background="@null"
        android:onClick="btnDaftarlink"
        android:text="@string/btnDaftarLink"
        android:textAllCaps="false"
        android:textSize="15dp" />
</LinearLayout>
</LinearLayout>
