<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <ImageView
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_gravity="center"
        android:src="@mipmap/ic_launcher" />
    <ProgressBar
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/pgBar"
        android:visibility="gone"/>
    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/edtEmail"
            android:hint="@string/edtEmail"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:singleLine="true"
            />



    </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/edtPass"
            android:hint="@string/edtPass"
            android:inputType="textPassword"
            android:maxLines="1"
            android:singleLine="true"
            />



    </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/edtConfPass"
            android:hint="@string/edtConfPass"
            android:textColor="@color/colorAccent"
            android:inputType="textPassword"
            android:maxLines="1"
            android:singleLine="true"
            />



    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/btnDaftar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:background="@color/colorAccent"
        android:onClick="btnDaftar"
        android:layout_gravity="center"
        android:text="@string/btnDaftar"
        android:textColor="@color/fontButton" />

</LinearLayout>
